update bug in generate pattern

--- a/notebooks/simulation/simulate.ipynb
+++ b/notebooks/simulation/simulate.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,6 +239,10 @@
     "    def __init__(self, tensor_cci, conditions, lr_labels, senders, receivers, \n",
     "                lr_metadata, cell_metadata, cell_lr_metadata):\n",
     "        '''\n",
+    "        Note: object stores all input arguments + self.rank (see below)\n",
+    "        \n",
+    "        Paramters\n",
+    "        -------\n",
     "        tensor_cci: tensorly.tensor\n",
     "            A tensor formatted in the method needed to run the tensor-cell2cell pipeline\n",
     "        conditions: list\n",
@@ -256,6 +260,11 @@
     "        cell_lr_metadata: pd.DataFrame\n",
     "            metadata associated with the expected groups of CC-LR categories that are expected to have patterns of \n",
     "            interaction\n",
+    "        \n",
+    "        Returns\n",
+    "        -------\n",
+    "        self.rank: int\n",
+    "            the expected rank after decomposition (= number of patterns in cell_lr_metadata)\n",
     "        '''\n",
     "        self.tensor_cci = tensor_cci\n",
     "        self.conditions = conditions\n",
@@ -264,12 +273,14 @@
     "        self.receivers = receivers\n",
     "        \n",
     "        self.lr_metadata = lr_metadata\n",
-    "        self.cell_metadata = cell_metadata"
+    "        self.cell_metadata = cell_metadata\n",
+    "        self.cell_lr_metadata = cell_lr_metadata\n",
+    "        self.rank = self.cell_lr_metadata.shape[0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -336,7 +347,7 @@
     "\n",
     "def generate_pattern(x, n_conditions):\n",
     "    pattern = x[0]\n",
-    "    return pattern_mapper[pattern](x[1:], n_conditions)\n",
+    "    return pattern_mapper[pattern](x[1:], n_conditions)[1:]\n",
     "\n",
     "class Simulate():\n",
     "    def __init__(self):\n",
@@ -578,7 +589,8 @@
     "        self.clrm.insert(3, 'change', self.clrm['0'].apply(lambda x: fold_change_pattern(x)))\n",
     "\n",
     "        # apply patterns to get averages across conditions\n",
-    "        self.clrm[[str(i) for i in range(self.n_conditions)]] = self.clrm[['pattern', 'change', '0']].apply(generate_pattern, args = (self.n_conditions,), axis = 1).tolist()\n",
+    "        if self.n_conditions > 1:\n",
+    "            self.clrm[[str(i) for i in range(1,self.n_conditions)]] = self.clrm[['pattern', 'change', '0']].apply(generate_pattern, args = (self.n_conditions,), axis = 1).tolist()\n",
     "\n",
     "    def generate_tensor(self, noise, binary = False):\n",
     "        '''Generates the tensor.\n",
@@ -675,6 +687,47 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/hratch/Projects/cci_dt/notebooks/simulation/tmpb_1e7mi0_bipartite_sf.csv\n",
+      "Generate undirected, bipartite, scale-free graph\n",
+      "Check network properties\n",
+      "All properties are as expected\n",
+      "Remove homotypic cell interactions for 1 categories\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "../../scripts/simulation/graphs.py:164: UserWarning: 66 nodes are disconnected, removing from network\n",
+      "  warnings.warn(mssg)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# generate simulation object\n",
+    "sim = Simulate() \n",
+    "sim.LR_network(network_type = 'scale-free', **{'nodes': 100, 'degrees': 3, 'alpha': 2}) #scale-free\n",
+    "sim.LR.generate_metadata(n_LR_cats = {3: 0}, cat_skew = 0)\n",
+    "\n",
+    "cci = CCI_MD()\n",
+    "cci.cci_network(n_cells = 15, directional = False)\n",
+    "cci.generate_metadata(n_cell_cats = {3: 0}, cat_skew = 0, remove_homotypic = 1)\n",
+    "\n",
+    "sim.cci = cci \n",
+    "sim.generate_tensor_md(n_patterns = 4, n_conditions = 5, patterns = ['pulse', 'linear', 'oscillate'])\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [
@@ -682,7 +735,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/hratch/Projects/cci_dt/notebooks/simulation/tmphmft8xin_bipartite_sf.csv\n",
+      "/home/hratch/Projects/cci_dt/notebooks/simulation/tmpgjc_2gj8_bipartite_sf.csv\n",
       "Generate undirected, bipartite, scale-free graph\n",
       "Check network properties\n",
       "All properties are as expected\n"
@@ -692,10 +745,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "../../scripts/simulation/graphs.py:164: UserWarning: 987 nodes are disconnected, removing from network\n",
+      "../../scripts/simulation/graphs.py:164: UserWarning: 1026 nodes are disconnected, removing from network\n",
       "  warnings.warn(mssg)\n",
-      "/home/hratch/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:327: UserWarning: Only continuous scoring is currently implemented\n",
-      "  0%|          | 0/12 [00:00<?, ?it/s]"
+      "/home/hratch/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:327: UserWarning: Only continuous scoring is currently implemented\n"
      ]
     },
     {
@@ -709,9 +761,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 12/12 [00:17<00:00,  1.49s/it]\n",
       "  0%|          | 0/12 [00:00<?, ?it/s]/home/hratch/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:352: FutureWarning: Using a non-tuple sequence for multidimensional indexing is deprecated; use `arr[tuple(seq)]` instead of `arr[seq]`. In the future this will be interpreted as an array index, `arr[np.array(seq)]`, which will result either in an error or a different result.\n",
-      "100%|██████████| 12/12 [00:00<00:00, 213.58it/s]\n",
+      "100%|██████████| 12/12 [00:01<00:00,  9.09it/s]\n",
       "  0%|          | 0/12 [00:00<?, ?it/s]"
      ]
     },
@@ -726,44 +777,45 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/hratch/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:380: FutureWarning: Using a non-tuple sequence for multidimensional indexing is deprecated; use `arr[tuple(seq)]` instead of `arr[seq]`. In the future this will be interpreted as an array index, `arr[np.array(seq)]`, which will result either in an error or a different result.\n",
-      "100%|██████████| 12/12 [00:26<00:00,  2.20s/it]\n"
+      "/home/hratch/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:386: FutureWarning: Using a non-tuple sequence for multidimensional indexing is deprecated; use `arr[tuple(seq)]` instead of `arr[seq]`. In the future this will be interpreted as an array index, `arr[np.array(seq)]`, which will result either in an error or a different result.\n",
+      "100%|██████████| 12/12 [00:24<00:00,  2.08s/it]\n"
      ]
     }
    ],
    "source": [
-    "# init\n",
-    "sim_sf = Simulate() \n",
-    "sim_norm = Simulate()\n",
+    "# # init\n",
+    "# sim = Simulate() \n",
+    "# # sim_norm = Simulate()\n",
     "\n",
-    "# simulate a randomly connected ligand-receptor network (potential interactions)\n",
-    "sim_sf.LR_network(network_type = 'scale-free', **{'nodes': 1000, 'degrees': 3, 'alpha': 2}) #scale-free\n",
-    "sim_norm.LR_network(network_type = 'normal', **{'n_ligands': 500, 'n_receptors': 500, 'p': 0.5}) # normally distributed\n",
-    "# from here on proceed with the scale-free network\n",
-    "sim = sim_sf\n",
+    "# # simulate a scale_free randomly connected ligand-receptor network (potential interactions)\n",
+    "# sim.LR_network(network_type = 'scale-free', **{'nodes': 1000, 'degrees': 3, 'alpha': 2}) #scale-free\n",
     "\n",
-    "# LR metadata\n",
-    "sim.LR.generate_metadata(n_LR_cats = {3: 0}, cat_skew = 0)\n",
+    "# # # simulate a ranodmly connected network with nomral distributions\n",
+    "# # sim_norm.LR_network(network_type = 'normal', **{'n_ligands': 500, 'n_receptors': 500, 'p': 0.5}) # normally distributed\n",
     "\n",
-    "# generate cell metadata, considering directionality (senders vs receivers)\n",
-    "cci = CCI_MD()\n",
-    "cci.cci_network(n_cells = 50, directional = True)\n",
     "\n",
-    "# generate 1 metadata categories, with 3 subcategories and 0 skew, the overall skew of categories is 0\n",
-    "# do not remove homotypic interactions\n",
-    "cci.generate_metadata(n_cell_cats = {3: 0}, cat_skew = 0, remove_homotypic = 0)\n",
-    "# add metadata to simulation object\n",
-    "sim.cci = cci\n",
+    "# # LR metadata\n",
+    "# sim.LR.generate_metadata(n_LR_cats = {3: 0}, cat_skew = 0)\n",
     "\n",
-    "# generate n_patter metadata groups of CC-LR pairs that change across n_conditions\n",
-    "# these changes can either be linear, oscillating, or a pulse\n",
-    "sim.generate_tensor_md(n_patterns = 4, n_conditions = 12, patterns = ['pulse', 'linear', 'oscillate'])\n",
+    "# # generate cell metadata, accounting for directionality (senders vs receivers)\n",
+    "# cci = CCI_MD()\n",
+    "# cci.cci_network(n_cells = 50, directional = True)\n",
     "\n",
-    "#generate a tensor with continuous LR scores and baseline noise\n",
-    "sim.generate_tensor(noise = 0.05, binary = False)\n",
+    "# # generate 1 metadata categories, with 3 subcategories and 0 skew, the overall skew of categories is 0\n",
+    "# # do not remove homotypic interactions\n",
+    "# cci.generate_metadata(n_cell_cats = {3: 0}, cat_skew = 0, remove_homotypic = 0)\n",
+    "# # add cell metadata to simulation object\n",
+    "# sim.cci = cci\n",
     "\n",
-    "# format the tensor to be input to tensor-cell2cell\n",
-    "sim.reshape()"
+    "# # generate n_patter metadata groups of CC-LR pairs that change across n_conditions\n",
+    "# # these changes can either be linear, oscillating, or a pulse\n",
+    "# sim.generate_tensor_md(n_patterns = 4, n_conditions = 12, patterns = ['pulse', 'linear', 'oscillate'])\n",
+    "\n",
+    "# #generate a tensor with continuous LR scores and no noise\n",
+    "# sim.generate_tensor(noise = 0, binary = False)\n",
+    "\n",
+    "# # format the tensor to be input to tensor-cell2cell\n",
+    "# sim.reshape()"
    ]
   }
  ],
