first draft Simulation() complete

--- a/notebooks/simulation/simulate.ipynb
+++ b/notebooks/simulation/simulate.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -346,8 +346,9 @@
     "pattern_mapper = {'linear': linear, 'pulse': pulse, 'oscillate': oscillate}\n",
     "\n",
     "def generate_pattern(x, n_conditions):\n",
-    "    pattern = x[0]\n",
-    "    return pattern_mapper[pattern](x[1:], n_conditions)[1:]\n",
+    "    vector = pattern_mapper[x[0]](x[1:], n_conditions)\n",
+    "    vector[0] = x[2]\n",
+    "    return vector\n",
     "\n",
     "class Simulate():\n",
     "    def __init__(self):\n",
@@ -551,8 +552,8 @@
     "            warnings.warn('More patterns than possible specificed, setting to maximum possible: {}'.format(clrm.shape[0]))\n",
     "            n_patterns = clrm.shape[0]\n",
     "\n",
-    "        for i in range(n_patterns):\n",
-    "            clrm = clrm.loc[sorted(random.sample(clrm.index.tolist(), k = n_patterns)),]\n",
+    "        # chose random subset to assign patterns to \n",
+    "        clrm = clrm.loc[sorted(random.sample(clrm.index.tolist(), k = n_patterns)),]\n",
     "        clrm.reset_index(inplace = True, drop = True)\n",
     "        clrm.LR_subcat = clrm.LR_subcat.apply(lambda x: x[0])\n",
     "        \n",
@@ -567,12 +568,15 @@
     "        ccats = [(ccat_map[ci[0]], ccat_map[ci[1]]) for ci in self.ts_frame.columns]\n",
     "        \n",
     "        # get tensor slice coordinates for CC-LR pairs with expected patterns\n",
-    "        def get_coords(i):\n",
-    "            coords = list(zip([k for k in range(len(ccats)) if \\\n",
-    "                                         ccats[k] == self.clrm.loc[i, 'cell_subcat']], \n",
-    "                                         [k for k in range(len(lrcats)) if lrcats[k] == self.clrm.loc[i, 'LR_subcat']]))\n",
-    "            return [tuple([i[0] for i in coords]), tuple([i[1] for i in coords])]\n",
-    "        self.clrm['ts_coordinates'] = pd.Series(self.clrm.index).apply(lambda i: get_coords(i)).tolist()\n",
+    "        # get tensor slice coordinates for CC-LR pairs with expected patterns\n",
+    "        def get_coords(x):\n",
+    "            '''Get the coords for each CC-LR metadata pair'''\n",
+    "            col_coord = [j for j,cmd in enumerate(ccats) if cmd == x[0]]\n",
+    "            row_coord = [i for i,lrmd in enumerate(lrcats) if lrmd == x[1]]\n",
+    "            coords = list(itertools.product(row_coord, col_coord))\n",
+    "            coords = [tuple(i[0] for i in coords), tuple([i[1] for i in coords])]\n",
+    "            return coords\n",
+    "        self.clrm['ts_coordinates'] = self.clrm[['cell_subcat', 'LR_subcat']].apply(lambda x: get_coords(x), axis = 1).tolist()\n",
     "        \n",
     "        # initial value\n",
     "        self.clrm[['0']] = list(np.arange(1/self.n_patterns, 1+1/self.n_patterns, 1/self.n_patterns))\n",
@@ -590,7 +594,7 @@
     "\n",
     "        # apply patterns to get averages across conditions\n",
     "        if self.n_conditions > 1:\n",
-    "            self.clrm[[str(i) for i in range(1,self.n_conditions)]] = self.clrm[['pattern', 'change', '0']].apply(generate_pattern, args = (self.n_conditions,), axis = 1).tolist()\n",
+    "            self.clrm[[str(i) for i in range(self.n_conditions)]] = self.clrm[['pattern', 'change', '0']].apply(generate_pattern, args = (self.n_conditions,), axis = 1).tolist()\n",
     "\n",
     "    def generate_tensor(self, noise, binary = False):\n",
     "        '''Generates the tensor.\n",
@@ -612,31 +616,45 @@
     "        if not binary:\n",
     "            binary = False\n",
     "            warnings.warn('Only continuous scoring is currently implemented')\n",
-    "        # initialize tensor slices\n",
-    "        self.ts = {str(i): self.ts_frame.copy() for i in range(self.n_conditions)}\n",
+    "        \n",
     "\n",
-    "        # generate the background\n",
-    "        print('Generate background noise')\n",
+    "        self.ts = dict() # intitialize\n",
+    "        c_labels = [str(i) for i in range(self.n_conditions)]\n",
     "        if noise == 0:\n",
-    "            for i in self.ts:\n",
-    "                self.ts[i] = self.ts[i].fillna(0)\n",
+    "            for cond in c_labels:\n",
+    "                df = self.ts_frame.copy()\n",
+    "                for idx in self.clrm.index:\n",
+    "                    avg_val = self.clrm.loc[idx, cond]\n",
+    "                    coords = self.clrm.loc[idx, 'ts_coordinates']\n",
+    "                    df.values[coords] = avg_val # non-backgroun \n",
+    "                df.fillna(0, inplace = True) # background\n",
+    "                self.ts[cond] = df\n",
     "        else:\n",
-    "            # background will have largest average = minimum across all conditions\n",
     "            min_val = self.clrm[[str(i) for i in range(self.n_conditions)]].min().min()\n",
     "            scale = min_val/np.array([utils.piecewise_fit(min_val, *utils.fit_params)])[0]\n",
-    "            for i in tqdm(self.ts):\n",
-    "                vals = utils.get_truncated_normal(n = self.ts[i].shape[0]*self.ts[i].shape[1], \n",
+    "            for cond in c_labels:\n",
+    "                df = self.ts_frame.copy()\n",
+    "                # background\n",
+    "                vals = utils.get_truncated_normal(n = self.ts_frame.shape[0]*self.ts_frame.shape[1], \n",
     "                                                  sd = noise*min_val, mean = 0)*scale\n",
-    "                self.ts[i][:] = vals.reshape(self.ts[i].shape)\n",
+    "                df[:] = vals.reshape(self.ts_frame.shape)\n",
+    "                for idx in self.clrm.index: # non-background\n",
+    "                    avg_val = self.clrm.loc[idx, cond]\n",
+    "                    coords = self.clrm.loc[idx, 'ts_coordinates']\n",
+    "                    df.values[coords] = utils.get_truncated_normal(n = len(coords[0]), \n",
+    "                                                                   sd = noise*avg_val, mean = avg_val)\n",
+    "                self.ts[cond] = df\n",
     "\n",
     "\n",
-    "        for cond in tqdm(self.ts):\n",
-    "            for i in self.clrm.index:\n",
-    "                avg_val = self.clrm.loc[i, cond]\n",
-    "                coords = self.clrm.loc[i, 'ts_coordinates']\n",
-    "\n",
-    "                self.ts[cond].values[coords] = avg_val if noise == 0 else \\\n",
-    "                                          utils.get_truncated_normal(n = len(coords[0]), sd = noise*avg_val, mean = avg_val)\n",
+    "#         for cond in tqdm(self.ts):\n",
+    "#             for i in self.clrm.index:\n",
+    "#                 avg_val = self.clrm.loc[i, cond]\n",
+    "#                 coords = self.clrm.loc[i, 'ts_coordinates']\n",
+    "                \n",
+    "#                 if noise == 0:\n",
+    "#                     self.ts[cond].values[coords] = avg_val\n",
+    "#                 else:\n",
+    "#                     self.ts[cond].values[coords] = utils.get_truncated_normal(n = len(coords[0]), sd = noise*avg_val, mean = avg_val)\n",
     "\n",
     "    def reshape(self):\n",
     "        '''Creates tensor in the format necessary for running with tensor-cell2cell and stores \n",
@@ -687,55 +705,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/hratch/Projects/cci_dt/notebooks/simulation/tmpb_1e7mi0_bipartite_sf.csv\n",
-      "Generate undirected, bipartite, scale-free graph\n",
-      "Check network properties\n",
-      "All properties are as expected\n",
-      "Remove homotypic cell interactions for 1 categories\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "../../scripts/simulation/graphs.py:164: UserWarning: 66 nodes are disconnected, removing from network\n",
-      "  warnings.warn(mssg)\n"
-     ]
-    }
-   ],
-   "source": [
-    "# generate simulation object\n",
-    "sim = Simulate() \n",
-    "sim.LR_network(network_type = 'scale-free', **{'nodes': 100, 'degrees': 3, 'alpha': 2}) #scale-free\n",
-    "sim.LR.generate_metadata(n_LR_cats = {3: 0}, cat_skew = 0)\n",
-    "\n",
-    "cci = CCI_MD()\n",
-    "cci.cci_network(n_cells = 15, directional = False)\n",
-    "cci.generate_metadata(n_cell_cats = {3: 0}, cat_skew = 0, remove_homotypic = 1)\n",
-    "\n",
-    "sim.cci = cci \n",
-    "sim.generate_tensor_md(n_patterns = 4, n_conditions = 5, patterns = ['pulse', 'linear', 'oscillate'])\n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/home/hratch/Projects/cci_dt/notebooks/simulation/tmpgjc_2gj8_bipartite_sf.csv\n",
+      "/home/hratch/Projects/cci_dt/notebooks/simulation/tmpuidyu2wp_bipartite_sf.csv\n",
       "Generate undirected, bipartite, scale-free graph\n",
       "Check network properties\n",
       "All properties are as expected\n"
@@ -745,24 +722,24 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "../../scripts/simulation/graphs.py:164: UserWarning: 1026 nodes are disconnected, removing from network\n",
+      "../../scripts/simulation/graphs.py:164: UserWarning: 1025 nodes are disconnected, removing from network\n",
       "  warnings.warn(mssg)\n",
-      "/home/hratch/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:327: UserWarning: Only continuous scoring is currently implemented\n"
+      "/home/hratch/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:332: UserWarning: Only continuous scoring is currently implemented\n",
+      "/home/hratch/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:344: FutureWarning: Using a non-tuple sequence for multidimensional indexing is deprecated; use `arr[tuple(seq)]` instead of `arr[seq]`. In the future this will be interpreted as an array index, `arr[np.array(seq)]`, which will result either in an error or a different result.\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Generate background noise\n"
+      "0 noise\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 0/12 [00:00<?, ?it/s]/home/hratch/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:352: FutureWarning: Using a non-tuple sequence for multidimensional indexing is deprecated; use `arr[tuple(seq)]` instead of `arr[seq]`. In the future this will be interpreted as an array index, `arr[np.array(seq)]`, which will result either in an error or a different result.\n",
-      "100%|██████████| 12/12 [00:01<00:00,  9.09it/s]\n",
+      "\r",
       "  0%|          | 0/12 [00:00<?, ?it/s]"
      ]
     },
@@ -777,46 +754,75 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/hratch/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:386: FutureWarning: Using a non-tuple sequence for multidimensional indexing is deprecated; use `arr[tuple(seq)]` instead of `arr[seq]`. In the future this will be interpreted as an array index, `arr[np.array(seq)]`, which will result either in an error or a different result.\n",
-      "100%|██████████| 12/12 [00:24<00:00,  2.08s/it]\n"
+      "/home/hratch/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:406: FutureWarning: Using a non-tuple sequence for multidimensional indexing is deprecated; use `arr[tuple(seq)]` instead of `arr[seq]`. In the future this will be interpreted as an array index, `arr[np.array(seq)]`, which will result either in an error or a different result.\n",
+      "100%|██████████| 12/12 [00:28<00:00,  2.34s/it]\n"
      ]
     }
    ],
    "source": [
-    "# # init\n",
-    "# sim = Simulate() \n",
-    "# # sim_norm = Simulate()\n",
+    "# init\n",
+    "sim = Simulate() \n",
+    "# sim_norm = Simulate()\n",
     "\n",
-    "# # simulate a scale_free randomly connected ligand-receptor network (potential interactions)\n",
-    "# sim.LR_network(network_type = 'scale-free', **{'nodes': 1000, 'degrees': 3, 'alpha': 2}) #scale-free\n",
+    "# simulate a scale_free randomly connected ligand-receptor network (potential interactions)\n",
+    "sim.LR_network(network_type = 'scale-free', **{'nodes': 1000, 'degrees': 3, 'alpha': 2}) #scale-free\n",
     "\n",
-    "# # # simulate a ranodmly connected network with nomral distributions\n",
-    "# # sim_norm.LR_network(network_type = 'normal', **{'n_ligands': 500, 'n_receptors': 500, 'p': 0.5}) # normally distributed\n",
+    "# # simulate a ranodmly connected network with nomral distributions\n",
+    "# sim_norm.LR_network(network_type = 'normal', **{'n_ligands': 500, 'n_receptors': 500, 'p': 0.5}) # normally distributed\n",
     "\n",
     "\n",
-    "# # LR metadata\n",
-    "# sim.LR.generate_metadata(n_LR_cats = {3: 0}, cat_skew = 0)\n",
+    "# LR metadata\n",
+    "sim.LR.generate_metadata(n_LR_cats = {3: 0}, cat_skew = 0)\n",
     "\n",
-    "# # generate cell metadata, accounting for directionality (senders vs receivers)\n",
-    "# cci = CCI_MD()\n",
-    "# cci.cci_network(n_cells = 50, directional = True)\n",
+    "# generate cell metadata, accounting for directionality (senders vs receivers)\n",
+    "cci = CCI_MD()\n",
+    "cci.cci_network(n_cells = 50, directional = True)\n",
     "\n",
-    "# # generate 1 metadata categories, with 3 subcategories and 0 skew, the overall skew of categories is 0\n",
-    "# # do not remove homotypic interactions\n",
-    "# cci.generate_metadata(n_cell_cats = {3: 0}, cat_skew = 0, remove_homotypic = 0)\n",
-    "# # add cell metadata to simulation object\n",
-    "# sim.cci = cci\n",
+    "# generate 1 metadata categories, with 3 subcategories and 0 skew, the overall skew of categories is 0\n",
+    "# do not remove homotypic interactions\n",
+    "cci.generate_metadata(n_cell_cats = {3: 0}, cat_skew = 0, remove_homotypic = 0)\n",
+    "# add cell metadata to simulation object\n",
+    "sim.cci = cci\n",
     "\n",
-    "# # generate n_patter metadata groups of CC-LR pairs that change across n_conditions\n",
-    "# # these changes can either be linear, oscillating, or a pulse\n",
-    "# sim.generate_tensor_md(n_patterns = 4, n_conditions = 12, patterns = ['pulse', 'linear', 'oscillate'])\n",
+    "# generate n_patter metadata groups of CC-LR pairs that change across n_conditions\n",
+    "# these changes can either be linear, oscillating, or a pulse\n",
+    "sim.generate_tensor_md(n_patterns = 4, n_conditions = 12, patterns = ['pulse', 'linear', 'oscillate'])\n",
     "\n",
-    "# #generate a tensor with continuous LR scores and no noise\n",
-    "# sim.generate_tensor(noise = 0, binary = False)\n",
+    "#generate a tensor with continuous LR scores and no noise\n",
+    "sim.generate_tensor(noise = 0, binary = False)\n",
     "\n",
-    "# # format the tensor to be input to tensor-cell2cell\n",
-    "# sim.reshape()"
+    "# format the tensor to be input to tensor-cell2cell\n",
+    "sim.reshape()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# import pickle\n",
+    "# if not os.path.isdir('tmp_sim_forerick'):\n",
+    "#     os.mkdir('tmp_sim_forerick')\n",
+    "# for k,v in sim.sim_tensor.__dict__.items():\n",
+    "#     if k != 'rank':\n",
+    "#         with open('tmp_sim_forerick/' + k + '.pickle','wb') as f:\n",
+    "#             pickle.dump(v, f, protocol=pickle.HIGHEST_PROTOCOL)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
