finalizaiton of 1st draft Simulation(), sparse tensor

--- a/notebooks/simulation/simulate.ipynb
+++ b/notebooks/simulation/simulate.ipynb
@@ -767,49 +767,86 @@
     }
    ],
    "source": [
-    "# init\n",
-    "sim = Simulate() \n",
-    "# sim_norm = Simulate()\n",
+    "# # init\n",
+    "# sim = Simulate() \n",
+    "# # sim_norm = Simulate()\n",
     "\n",
-    "# simulate a scale_free randomly connected ligand-receptor network (potential interactions)\n",
-    "sim.LR_network(network_type = 'scale-free', **{'nodes': 100, 'degrees': 3, 'alpha': 2}) #scale-free\n",
+    "# # simulate a scale_free randomly connected ligand-receptor network (potential interactions)\n",
+    "# sim.LR_network(network_type = 'scale-free', **{'nodes': 100, 'degrees': 3, 'alpha': 2}) #scale-free\n",
     "\n",
-    "# # simulate a ranodmly connected network with nomral distributions\n",
-    "# sim_norm.LR_network(network_type = 'normal', **{'n_ligands': 500, 'n_receptors': 500, 'p': 0.5}) # normally distributed\n",
+    "# # # simulate a ranodmly connected network with nomral distributions\n",
+    "# # sim_norm.LR_network(network_type = 'normal', **{'n_ligands': 500, 'n_receptors': 500, 'p': 0.5}) # normally distributed\n",
     "\n",
     "\n",
-    "# LR metadata\n",
-    "sim.LR.generate_metadata(n_LR_cats = {3: 0}, cat_skew = 0)\n",
+    "# # LR metadata\n",
+    "# sim.LR.generate_metadata(n_LR_cats = {3: 0}, cat_skew = 0)\n",
     "\n",
-    "# generate cell metadata, accounting for directionality (senders vs receivers) and \n",
-    "# allowing for autocrine interactions \n",
-    "cci = CCI_MD()\n",
-    "cci.cci_network(n_cells = 50, directional = True, autocrine = True)\n",
+    "# # generate cell metadata, accounting for directionality (senders vs receivers) and \n",
+    "# # allowing for autocrine interactions \n",
+    "# cci = CCI_MD()\n",
+    "# cci.cci_network(n_cells = 50, directional = True, autocrine = True)\n",
     "\n",
-    "# generate 1 metadata categories, with 3 subcategories and 0 skew, the overall skew of categories is 0\n",
-    "# do not remove homotypic interactions (will be included)\n",
-    "cci.generate_metadata(n_cell_cats = {3: 0}, cat_skew = 0, remove_homotypic = 0)\n",
-    "# add cell metadata to simulation object\n",
-    "sim.cci = cci\n",
+    "# # generate 1 metadata categories, with 3 subcategories and 0 skew, the overall skew of categories is 0\n",
+    "# # do not remove homotypic interactions (will be included)\n",
+    "# cci.generate_metadata(n_cell_cats = {3: 0}, cat_skew = 0, remove_homotypic = 0)\n",
+    "# # add cell metadata to simulation object\n",
+    "# sim.cci = cci\n",
     "\n",
-    "# generate n_patter metadata groups of CC-LR pairs that change across n_conditions\n",
-    "# these changes can either be linear, oscillating, or a pulse; allow homotypic interactions to form patterns\n",
-    "sim.generate_tensor_md(n_patterns = 4, n_conditions = 12, patterns = ['pulse', 'linear', 'oscillate'], \n",
-    "                      consider_homotypic = True)\n",
+    "# # generate n_patter metadata groups of CC-LR pairs that change across n_conditions\n",
+    "# # these changes can either be linear, oscillating, or a pulse; allow homotypic interactions to form patterns\n",
+    "# sim.generate_tensor_md(n_patterns = 4, n_conditions = 12, patterns = ['pulse', 'linear', 'oscillate'], \n",
+    "#                       consider_homotypic = True)\n",
     "\n",
-    "#generate a tensor with continuous LR scores and no noise\n",
-    "sim.generate_tensor(noise = 0, binary = False, bulk = True)\n",
+    "# #generate a tensor with continuous LR scores and no noise; keep single-cells \n",
+    "# sim.generate_tensor(noise = 0, binary = False, bulk = False)\n",
     "\n",
-    "# format the tensor to be input to tensor-cell2cell\n",
-    "sim.reshape()"
+    "# # format the tensor to be input to tensor-cell2cell\n",
+    "# sim.reshape()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# # init\n",
+    "# sim = Simulate() \n",
+    "# # sim_norm = Simulate()\n",
+    "\n",
+    "# # simulate a scale_free randomly connected ligand-receptor network (potential interactions)\n",
+    "# sim.LR_network(network_type = 'scale-free', **{'nodes': 100, 'degrees': 3, 'alpha': 2}) #scale-free\n",
+    "\n",
+    "# # # simulate a ranodmly connected network with nomral distributions\n",
+    "# # sim_norm.LR_network(network_type = 'normal', **{'n_ligands': 500, 'n_receptors': 500, 'p': 0.5}) # normally distributed\n",
+    "\n",
+    "\n",
+    "# # LR metadata\n",
+    "# sim.LR.generate_metadata(n_LR_cats = {3: 0}, cat_skew = 0)\n",
+    "\n",
+    "# # generate cell metadata, accounting for directionality (senders vs receivers) and \n",
+    "# # allowing for autocrine interactions \n",
+    "# cci = CCI_MD()\n",
+    "# cci.cci_network(n_cells = 50, directional = True, autocrine = True)\n",
+    "\n",
+    "# # generate 1 metadata categories, with 3 subcategories and 0 skew, the overall skew of categories is 0\n",
+    "# # do not remove homotypic interactions (will be included)\n",
+    "# cci.generate_metadata(n_cell_cats = {3: 0}, cat_skew = 0, remove_homotypic = 0)\n",
+    "# # add cell metadata to simulation object\n",
+    "# sim.cci = cci\n",
+    "\n",
+    "# # generate n_patter metadata groups of CC-LR pairs that change across n_conditions\n",
+    "# # these changes can either be linear, oscillating, or a pulse; allow homotypic interactions to form patterns\n",
+    "# sim.generate_tensor_md(n_patterns = 4, n_conditions = 12, patterns = ['pulse', 'linear', 'oscillate'], \n",
+    "#                       consider_homotypic = True)\n",
+    "\n",
+    "# #generate a tensor with continuous LR scores and no noise; keep single-cells \n",
+    "# sim.generate_tensor(noise = 0, binary = False, bulk = True)\n",
+    "\n",
+    "# # format the tensor to be input to tensor-cell2cell\n",
+    "# sim.reshape()\n",
+    "\n",
+    "\n",
     "# import pickle\n",
     "# if not os.path.isdir('tmp_sim_forerick'):\n",
     "#     os.mkdir('tmp_sim_forerick')\n",
